profile-packages-metadata/CustomObject/objects/Cloud_News__e.object
<CustomObject>
    <description>Cloud news events deliver news at your fingertips</description>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>News_Content__c</fullName>
        <label>News Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Urgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent</label>
        <type>Checkbox</type>
    </fields>
    <label>Cloud News</label>
    <pluralLabel>Cloud News</pluralLabel>
</CustomObject>